--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 body {
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #0c0c0d;
+  background-color: #000000ef;
 }
 
 #header {
   text-align: center;
   font-size: 24px;
   font-weight: bold;
-  color: white;
-  text-shadow: 0 0 21px rgb(146, 53, 110), 0 0 42px rgb(146, 53, 110),
-    0 0 82px rgb(146, 53, 110);
+  color:white;
   margin-bottom: 0px;
 }
 
@@ -23,7 +22,7 @@ body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin: 0 auto;
+  margin: 20px auto;
   width: 90%;
   max-width: 700px;
 }
@@ -31,17 +30,18 @@ body {
 #date-count-container {
   color: white;
   display: flex;
-  flex-direction: column;
-  align-items:flex-start;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   width: 90%;
   max-width: 700px;
-  margin: 0 auto; /* 중앙 정렬 */
+  margin: 0 auto;
 }
 #todayDate{
   font-size: 17px;
 }
 #count {
-  font-size: 14px;
+  font-size: 15px;
   display: flex;
   gap: 15px;
 }
@@ -52,6 +52,7 @@ body {
 
 #list li {
   font-size: 15px;
+  font-weight: bold;
   background: #2c2c2c;
   padding: 12px;
   border-radius: 8px;
@@ -67,9 +68,9 @@ h1 {
 }
 
 .explain {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bold;
-  margin-top: 0;
+  margin-top: 20px;
 }
 
 input[type="checkbox"] {
@@ -86,8 +87,8 @@ input[type="checkbox"] {
 
 /* 체크박스 선택 시 */
 input[type="checkbox"]:checked {
-  background-color: #ff0080;
-  border-color: #ff0080;
+  background-color: #ed1e85;
+  border-color: #f34da0;
   box-shadow: 0px 0px 10px rgba(255, 0, 128, 0.7);
 }
 
@@ -105,12 +106,12 @@ input[type="checkbox"]:checked::before {
 }
 
 #todoPost{
-  margin-top: 35px;
+  margin-top: 20px;
+  margin-bottom: 15px;
   position:flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  gap: 20px;
 }
 
 
@@ -122,8 +123,8 @@ button{
   margin-left: 20px;
   border-radius: 20px;
   font-size: 15px;
+  font-weight: bold;
   cursor: pointer;
-  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.4);
 }
 
 #todoRecord{
